--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "popper.js": "^1.16.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.3",
-    "react-dom": "17.0.2",
-    "react-toastify": "^8.1.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
