--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,6 +13,7 @@
     "next": "12.0.7",
     "popper.js": "^1.16.1",
     "react": "17.0.2",
+    "react-alice-carousel": "^2.6.4",
     "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2"
   },
